--- a/app/src/main/res/layout/fragment_my_meetings_page.xml
+++ b/app/src/main/res/layout/fragment_my_meetings_page.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:text="List of my meetings :"
+        android:text="@string/list_of_meetings"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
