--- a/app/src/main/res/layout/fragment_sign_up_as_barber_page.xml
+++ b/app/src/main/res/layout/fragment_sign_up_as_barber_page.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="Username :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Owner name :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/signupasbarber_username_tv"
@@ -36,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Barber phone :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/signupasbarber_barbershopemail_tv"
@@ -47,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Barber Email :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/signupasbarber_barbershopname_tv"
@@ -58,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Barber password :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/signupasbarber_barbershopaddress_tv"
@@ -69,6 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Barber address :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/signupasbarber_barbershopphone_tv"
@@ -80,6 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Barber name :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/signupasbarber_ownername_tv"
@@ -92,7 +99,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="username"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/signupasbarber_username_tv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,7 +112,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="owner name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/signupasbarber_ownername_tv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,7 +125,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="barber name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/signupasbarber_barbershopname_tv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,7 +138,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="email"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="@+id/signupasbarber_barbershopemail_tv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -148,7 +151,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="phone"
         android:inputType="phone"
         app:layout_constraintBottom_toBottomOf="@+id/signupasbarber_barbershopphone_tv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -162,7 +164,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="address"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/signupasbarber_barbershopaddress_tv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -176,44 +177,51 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="@+id/signupasbarber_password_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/signupasbarber_password_tv"
         app:layout_constraintTop_toTopOf="@+id/signupasbarber_password_tv" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signupasbarber_signup_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/shape_selector"
         android:text="Sign Up"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signupasbarber_openingdays_btn"
         android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/shape_selector"
+        android:padding="7dp"
         android:text="Opening Days"
+        android:textColor="@color/white"
         app:icon="@android:drawable/ic_menu_today"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signupasbarber_password_tv" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signupasbarber_openinghours_btn"
         android:layout_width="wrap_content"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/shape_selector"
+        android:padding="7dp"
         android:text="Opening Hours"
+        android:textColor="@color/white"
         app:icon="@android:drawable/ic_lock_idle_alarm"
         app:layout_constraintBottom_toBottomOf="@+id/signupasbarber_openingdays_btn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -225,6 +233,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Haircut price :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/signupasbarber_openingdays_btn"
@@ -237,7 +246,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="price"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="@+id/signupasbarber_haircutprice_tv"
         app:layout_constraintEnd_toEndOf="parent"
