--- a/app/src/main/res/layout/fragment_sign_up_as_client_page.xml
+++ b/app/src/main/res/layout/fragment_sign_up_as_client_page.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:text="Username :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Email :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/signupasclient_username_tv"
@@ -36,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Phone :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/signupasclient_email_tv"
@@ -47,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Password :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/signupasclient_phone_tv"
@@ -59,7 +63,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="username"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/signupasclient_username_tv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +76,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="email"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="@+id/signupasclient_email_tv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +89,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="phone"
         android:inputType="phone"
         app:layout_constraintBottom_toBottomOf="@+id/signupasclient_phone_tv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,22 +102,23 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="@+id/signupasclient_password_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/signupasclient_password_tv"
         app:layout_constraintTop_toTopOf="@+id/signupasclient_password_tv" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signupasclient_signup_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/shape_selector"
         android:text="Sign Up"
         android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
