--- a/app/src/main/res/layout/fragment_barber_home_page.xml
+++ b/app/src/main/res/layout/fragment_barber_home_page.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:text="Barbers :"
+        android:text="@string/Barbers"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,23 +29,29 @@
         app:layout_constraintStart_toStartOf="@+id/barberhomepage_barberstitle_tv"
         app:layout_constraintTop_toBottomOf="@+id/barberhomepage_barberstitle_tv" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/barberhomepage_addbarber_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@drawable/shape_selector"
         android:text="Add barber"
+        android:padding="15dp"
+        android:textColor="@color/white"
         app:icon="@android:drawable/ic_menu_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/barberhomepage_barberstitle_tv"
         app:layout_constraintTop_toBottomOf="@+id/barberhomepage_barbers_list_rv" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/barberhomepage_calendar_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
+        android:padding="15dp"
+        android:background="@drawable/shape_selector"
         android:text="Calendar"
+        android:textColor="@color/white"
         app:icon="@android:drawable/ic_menu_today"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/barberhomepage_addbarber_btn" />
