--- a/app/src/main/res/layout/fragment_client_home_page.xml
+++ b/app/src/main/res/layout/fragment_client_home_page.xml
@@ -7,13 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".ClientHomePage" >
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/clienthomepage_seebarbersatmap_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/shape_selector"
         android:text="See barbers around you at map"
+        android:textColor="@color/white"
+        android:padding="7dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,17 +26,20 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:ems="10"
+        android:hint="Enter your location"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="@+id/clienthomepage_seebarbersatmap_btn"
         app:layout_constraintTop_toBottomOf="@+id/clienthomepage_seebarbersatmap_btn" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/clienthomepage_search_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/shape_selector"
         android:text="Search"
+        android:textColor="@color/white"
         app:icon="@android:drawable/ic_menu_search"
         app:layout_constraintBottom_toBottomOf="@+id/clienthomepage_search_et"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +51,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="BarberShops List :"
+        android:text="@string/Barber_shop_list"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="@+id/clienthomepage_search_et"
@@ -60,12 +67,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clienthomepage_barbershopslist_tv" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/clienthomepage_mymeetings_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:background="@drawable/shape_selector"
         android:text="My meetings"
+        android:padding="7dp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
