--- a/app/src/main/res/layout/fragment_edit_barber.xml
+++ b/app/src/main/res/layout/fragment_edit_barber.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:text="Name :"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Edit works :"
+        android:text="@string/Edit_works"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/editbarber_name_tv"
@@ -58,30 +60,36 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/purple_500"
+        android:background="@color/appblue"
         android:clickable="true"
         android:src="@android:drawable/ic_dialog_info"
         app:layout_constraintBottom_toTopOf="@+id/editbarber_barberworkspictureslist_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editbarber_editworks_tv" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/editbarber_delete_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="45dp"
+        android:background="@drawable/shape_selector"
+        android:padding="15dp"
         android:text="Delete"
+        android:textColor="@color/white"
         app:icon="@android:drawable/ic_menu_delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editbarber_barberworkspictureslist_rv" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/editbarber_save_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="45dp"
+        android:background="@drawable/shape_selector"
+        android:padding="15dp"
         android:text="Save"
+        android:textColor="@color/white"
         app:icon="@android:drawable/ic_menu_save"
         app:layout_constraintBottom_toBottomOf="@+id/editbarber_delete_btn"
         app:layout_constraintEnd_toEndOf="parent"
