--- a/app/src/main/res/layout/fragment_see_barber_post_as_client_page.xml
+++ b/app/src/main/res/layout/fragment_see_barber_post_as_client_page.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:text="Barber Post :"
+        android:text="@string/Barbers_posts"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Comments :"
+        android:text="@string/Comments"
+        android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="@+id/seebarberpostasclient_barberpostheadline_tv"
@@ -48,14 +50,17 @@
         app:layout_constraintStart_toStartOf="@+id/seebarberpostasclient_postlist_rv"
         app:layout_constraintTop_toBottomOf="@+id/seebarberpostasclient_comments_tv" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/seebarberpostasclient_addcomment_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:padding="7dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:text="Add comment"
+        android:background="@drawable/shape_selector"
+        android:text="Add"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seebarberpostasclient_commentslist_rv" />
